--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
 
              <label class="block text-white font-bold mb-2 " for="name">Name</label>
             <input class=" placeholder-white py-1 px-15 bg-[#917fd7] text-[#ffffff]
-             rounded md:py-2 md:px-60" type="text" id="name" placeholder="Your name">
+             rounded lg:py-2 lg:px-60" type="text" id="name" placeholder="Your name">
 
                   <label class="block text-white font-bold mb-2 " for="ema">Email</label>
                  <input class=" placeholder-white bg-[#917fd7] py-1 px-15 text-[#5E3AEE]
-                  rounded md:py-2 md:px-60" type="email" id="ema" placeholder="Email">
+                  rounded lg:py-2 lg:px-60" type="email" id="ema" placeholder="Email">
 
 
                        <label class="block text-white font-bold mb-2 " for="msg">Message</label>
                       <input class=" placeholder-white bg-[#917fd7] py-1 px-15 text-[#5E3AEE]
-                       rounded h-15 md:mt-4 md:py-2 md:px-60 md:h-28" type="text" id="msg" placeholder="Message"> 
+                       rounded h-15 lg:mt-4 lg:py-2 lg:px-60 lg:h-28" type="text" id="msg" placeholder="Message"> 
                        
                        <br>
 
-                    <input class="border mt-1 py-1 px-20 bg-white font-bold cursor-pointer rounded md:mt-4 md:py-2 md:px-60" type="submit" value="Submit">
+                    <input class="border mt-1 py-1 px-20 bg-white font-bold cursor-pointer rounded md:mt-4 md:py-2 lg:px-60" type="submit" value="Submit">
                     </div>
     </form>
     </main> 
