--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav class="flex justify-between">
             <h1 class="text-[#5E3AEE] font-extrabold text-xl">&lt;/reboot13&gt;</h1>
             <ul class="flex gap-6 font-medium font-sans">
-                <li class="font-bold">Home</li>
-                <li>Projects</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li class="font-bold"><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
