--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="px-8 py-1 text-white bg-[#5E3AEE] shadow-lg font-bold">Projects</button></div>
     </div>
         <div>
-        <img src="./laptop 1.png" alt="laptop"></div>
+        <img src="images/laptop 1.png" alt="laptop"></div>
     </section>
     <section class=" mb-24 border-2 py-5 border-x-0 border-[#BFB8B8] flex justify-around">
         <div class="text-center">
@@ -62,7 +62,7 @@
             <p class="text-white font-[poppins] font-semibold text-base">I’m currently learning UI/UX development. Checkout my <br> projects on github. <br> <a href="" class="text-[#5E3AEE] text-xl">@reboot13-git</a> </p>
     </div>
         <div>
-        <img src="./Mockup.png" width="485px" height="590px"  alt="laptop"></div>
+        <img src="images/Mockup.png" width="485px" height="590px"  alt="laptop"></div>
     </section>
     <div><h1 class="font-extrabold text-[#5E3AEE] text-5xl font-[poppins]">Skills</h1></div>
 
@@ -90,7 +90,7 @@
     <main class="flex justify-around pt-14 h-[576px] mt-16 bg-[#5E3AEE]">
         <div> <h2 class="text-white text-3xl font-bold pb-6">Contact</h2>
             <p class="text-white font-sans font-medium">Want a website for your brand and business? <br>I design what you desire....</p>
-        <img src="./hshs 1.png" alt="">
+        <img src="images/hshs 1.png" alt="">
         </div>
         <form action="#">
         <div class="mb-4">
