--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="bg-[#F0F0F5]  h-[547px] flex items-center justify-around my-6 mb-24 m-auto">
         <div>
         <h1 class="font-bold text-[49px]">Hello,
-            <br>I am <span class="text-[#5E3AEE]">Atik Hassan.</span></h1>
+            <br>I am <span class="text-[#5E3AEE]">Krutik Raut.</span></h1>
             <p class="text-[#696969] font-[poppins] font-semibold text-3xl">Web Designer/Developer</p>
             <div class="font-[poppins] flex space-x-5 py-4">
             <button class="px-8 py-1 bg-white shadow-lg font-bold">Contact</button>
@@ -119,7 +119,7 @@
         <div class="text-right pr-44">
         <a href="https://www.facebook.com/ki.korbi.id.diye"><i class="fab fa-facebook-f text-blue-600 text-3xl"></i></a>
         <a href="https://www.instagram.com/atik_h35/"><i class="fab fa-instagram text-pink-500 text-3xl"></i></a>
-        <a href="https://x.com/AtikHassan35"><i class="fab fa-x-twitter text-blue-400 text-3xl"></i></a>
+        <a href="https://x.com/AtikHassan35"><i class="fab fa-x-twitter bg-black text-white text-[28px] rounded"></i></a>
     <a href="01575537735"><i class="fas fa-phone text-green-400 text-3xl"></i></a>
 </div>
         <p class="text-center p-6 font-medium text-[#696969] text-2xl">@reboot13_dev</p>
